Fixed Bug 1: Product search was returning incomplete results